@@ -1,3 +1,13 @@
+2007-02-20  Krzysztof Kowalczyk  <kkowalczyk@gmail.com>
+
+        Reviewed by Darin.
+
+        Allow over-writting Product, ProductSub, Vendor and VendorSub
+        js properties via #define WEBCORE_NAVIGATOR_*
+
+        * bindings/js/kjs_navigator.cpp:
+        (KJS::Navigator::getValueProperty):
+
 2007-02-20  Darin Adler  <darin@apple.com>
 
         Reviewed by Anders.
